--- a/task6/index.css
+++ b/task6/index.css
@@ -7,14 +7,14 @@ body{
     background-color: #fff;
 }
 .header{
-    gap: 15%;
-    display: flex;
+    
+    
     position: relative;
     width: 1920px;
     height: 75px;
     flex-shrink: 0;
     background-color: #222;
-    align-items: center;
+    
 }
 .logo{
     margin-left: 1%;
@@ -27,10 +27,62 @@ body{
 .search{
     
     position: relative;
-    width: 26.002px;
+    background-color: #222;
+    border: 0;
+    transition-duration: 0.4s;
+
+}
+.menu{
+    position: relative;
+    margin-left: 40%;
+    background-color: #222;
     
-    height: 26.792px;
-    flex-shrink: 0;
+    transition-duration: 0.4s;
+    border: 0;
+    
+}
+.linkMenu{
+    border: 1px;
+    border-color: #ff6a6a;
+    border-collapse: collapse;
+}
+.tallMenu{
+    
+    padding: 15px;
+    border-color: #ff6a6a;
+    position: relative;
+    right: 12%;
+    top: 75%;
+}
+.conteinerMenu{
+    display: flex;
+    flex-direction: column;
+
+}
+.account{
+    position: relative;
+    background-color: #222;
+    border: 0;
+    transition-duration: 0.4s;
+    
+}
+.cart{
+    position: relative;
+    background-color: #222;
+    border: 0;
+    transition-duration: 0.4s;
+}
+.cart :hover{
+    box-shadow: 0 12px 16px 0 rgba(250, 245, 245, 0.24),
+    0 17px 50px 0 rgba(255, 255, 255, 0.19);
+}
+.menu  :hover{
+    box-shadow: 0 12px 16px 0 rgba(250, 245, 245, 0.24),
+    0 17px 50px 0 rgba(255, 255, 255, 0.19);
+}
+.account:hover{
+    box-shadow: 0 12px 16px 0 rgba(250, 245, 245, 0.24),
+    0 17px 50px 0 rgba(255, 255, 255, 0.19);
 }
 .buttons{
     
@@ -118,6 +170,7 @@ body{
     background-color: rgba(33, 22, 22, 0.70);
     
 }
+
 .position2{
     display: flex;
     flex-direction: column-reverse;
@@ -381,13 +434,25 @@ line-height: normal;
         width: 100%;
         background-color: #222;
         align-items: center;
-        gap: 15%;
+        gap: 10%;
         display: flex;
         position: relative;
         
     }
-    
-    .midBox{display: flex;flex-direction: column;flex-wrap: wrap;align-content: center;justify-content: center;align-items: center;}
+    .menu {
+        position: relative;
+        margin-left: 0%;
+        background-color: #222;
+        transition-duration: 0.4s;
+        border: 0;}
+    .midBox{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+    }
     .logo{
         left: 1%;
         
@@ -411,6 +476,14 @@ line-height: normal;
         
         flex-shrink: 0;
         position: relative;
+    }
+    .tallMenu {
+        display: none;
+        padding: 15px;
+        border-color: #ff6a6a;
+        position: relative;
+        right: 29%;
+        top: 148%;
     }
     .background{
         display: flex;
@@ -546,6 +619,9 @@ line-height: normal;
         font-weight: 400;
         line-height: normal;
     }
+    .items{
+        margin: 0;
+    }
     .items2{
         
         color: #5D5D5D;
@@ -573,7 +649,7 @@ line-height: normal;
         /* background-color: #F1E4E6; */
         top: 2%;
         display: flex;
-        width: 92%;
+        width: 62.5%;
         margin: 4%;
         height: 16%;
         flex-shrink: 0;
