--- a/task6/index.css
+++ b/task6/index.css
@@ -6,40 +6,34 @@ body{
     height: 3225px;
     background-color: #fff;
 }
-.header{
-    
-    
-    position: relative;
-    width: 1920px;
-    height: 75px;
-    flex-shrink: 0;
-    background-color: #222;
-    
+.header{ 
+display: flex;
+position: relative;
+width: 1920px;
+height: 75px;
+flex-shrink: 0;
+background-color: #222;
 }
 .logo{
-    margin-left: 1%;
-    
+    margin: 1%;
     position: relative;
     width: 44px;
     height: 38px;
     flex-shrink: 0;
 }
 .search{
-    
-    position: relative;
-    background-color: #222;
-    border: 0;
-    transition-duration: 0.4s;
-
+left: 65%;
+position: relative;
+background-color: #222; 
+border: 0;
+transition-duration: 0.4s;
 }
 .menu{
     position: relative;
-    margin-left: 40%;
+    left: 70%;
     background-color: #222;
-    
     transition-duration: 0.4s;
     border: 0;
-    
 }
 .linkMenu{
     border: 1px;
@@ -48,11 +42,14 @@ body{
 }
 .tallMenu{
     
-    padding: 15px;
-    border-color: #ff6a6a;
-    position: relative;
-    right: 12%;
-    top: 75%;
+height: 115%;
+background: #fff;
+left: 67%;
+padding: 15px;
+border-color: #ff6a6a; 
+position: relative; 
+right: 12%; 
+top: 75%;
 }
 .conteinerMenu{
     display: flex;
@@ -60,17 +57,18 @@ body{
 
 }
 .account{
+    left: 70%;
     position: relative;
     background-color: #222;
     border: 0;
     transition-duration: 0.4s;
-    
 }
 .cart{
     position: relative;
     background-color: #222;
     border: 0;
     transition-duration: 0.4s;
+    left: 75%;
 }
 .cart :hover{
     box-shadow: 0 12px 16px 0 rgba(250, 245, 245, 0.24),
@@ -434,7 +432,7 @@ line-height: normal;
         width: 100%;
         background-color: #222;
         align-items: center;
-        gap: 10%;
+        gap: 0%;
         display: flex;
         position: relative;
         
@@ -469,14 +467,20 @@ line-height: normal;
         height: 26.792px;
         flex-shrink: 0;
     }
-    .buttons{
-        
-        left: 8%;
-        
-        
-        flex-shrink: 0;
+    .menu{
         position: relative;
+        left: 10%;
+        background-color: #222;
+        transition-duration: 0.4s;
+        border: 0;
     }
+    .linkMenu{
+        border: 1px;
+        border-color: #ff6a6a;
+        border-collapse: collapse;
+        display: none;
+    }
+    
     .tallMenu {
         display: none;
         padding: 15px;
@@ -484,6 +488,20 @@ line-height: normal;
         position: relative;
         right: 29%;
         top: 148%;
+    }
+    .account{
+        left: 15%;
+        position: relative;
+        background-color: #222;
+        border: 0;
+        transition-duration: 0.4s;
+    }
+    .cart{
+        position: relative;
+        background-color: #222;
+        border: 0;
+        transition-duration: 0.4s;
+        left: 20%;
     }
     .background{
         display: flex;
@@ -500,7 +518,7 @@ line-height: normal;
     .rectangle{
         position: relative;
         top: 1%;
-        right: 55%;
+        right: 59%;
         background: #F16D7F;
         width: 2%;
         height: 30%;
@@ -516,12 +534,12 @@ line-height: normal;
         font-style: normal;
         font-weight: 900;
         line-height: normal;
-        right: 55%;
+        right: 59%;
         margin: 0;
     }
     .OF_LUXERIOUS{
         position: relative;
-        right: 53.5%;
+        right: 59.5%;
         top: 18.5%;
         height: 32px;
         color: #222;
@@ -534,7 +552,7 @@ line-height: normal;
     }
     .FASHION{
         position: relative;
-        right: 92%;
+        right: 99%;
         top: 39.5%;
         height: 6%;
         color: #F16D7F;
@@ -619,9 +637,6 @@ line-height: normal;
         font-weight: 400;
         line-height: normal;
     }
-    .items{
-        margin: 0;
-    }
     .items2{
         
         color: #5D5D5D;
@@ -658,7 +673,6 @@ line-height: normal;
         justify-content: space-around;
         flex-direction: row;
         position: relative;
-        
     }
     .woman2{
         background-color: #F1E4E6;
@@ -731,7 +745,7 @@ line-height: normal;
     .e-mailSubs{
         margin: 4%;
         display: flex;
-        width: 92%;
+        width: 82%;
         height: 50%;
         flex-direction: column;
         justify-content: center;
